deployment/v-tracer/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v-tracer-client-ingress-prod
  namespace: v-tracer-client-prod
  annotations:
    kubernetes.io/ingress.class: nginx  
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - secretName: v-tracer-tls
      hosts:
        - v-tracer.com
  rules:
    - host: v-tracer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v-tracer-client-service
                port:
                  number: 80
